Remove the HTTP server and make it opt-in at generation
